Improving the web interface, adding the file load into the interface. Fixing some small interface bugs. Prevented an entire translation job to be canceled if just one source sentence is too long.

--- a/script/web/v2.0/owl_translate.css
+++ b/script/web/v2.0/owl_translate.css
@@ -186,3 +186,7 @@ input#log_clear_btn {
 div.progress span {
     white-space: nowrap;
 }
+
+input#input_file_select {
+    display: inline-flex;
+}
